<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="27dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/passward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="#30ff"
        android:drawableStart="@drawable/ic_passward"
        android:drawablePadding="27dp"
        android:hint="@string/passward"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:textStyle="italic" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passward"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#A1A1A1"
        android:elevation="5dp"
        android:text="@string/login"
        android:textColor="#1B5E20"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/forget_passward"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/socialIcons"
        android:layout_centerHorizontal="true"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/socialIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_icons8_google" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ff" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="25dp"
            android:src="@drawable/ttt" />


    </LinearLayout>






</RelativeLayout>